<resources>
    <string name="app_name">Exchange</string>
    <string name="main_euro">Euro</string>
    <string name="main_dolar">Dolar</string>
    <string name="main_pounds">Pounds</string>
    <string name="main_quantity">Quantity</string>
    <string name="main_final_exchange">Final Exchange</string>
    <string name="main_original_exchange">Original Exchange</string>
    <string name="main_button_change">Change</string>
    <string name="main_editText_text">0.00</string>
    <string name="coin_euro">Euro</string>
    <string name="coin_pound">Pounds</string>
    <string name="coin_dolar">Dolar</string>
    <string name="main_message_toast"><![CDATA[%.2f %s => %.2f %s]]></string>
</resources>
