<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_padding_linearLayout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_txtQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/main_editQty"
        android:text="@string/main_quantity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="@string/main_editText_text"
        android:labelFor="@+id/main_editQty"
        android:maxLines="1"
        android:gravity ="right"
        android:selectAllOnFocus="true"
        android:focusable="true"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/main_txtOrgExc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/main_orgExc"
        android:text="@string/main_original_exchange" />

    <RadioGroup
        android:id="@+id/main_orgExc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin_radioButton"
        android:labelFor="@+id/main_txtOrgExc"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbFromEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/main_euro" />

        <RadioButton
            android:id="@+id/rbFromDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/main_dolar" />

        <RadioButton
            android:id="@+id/rbFromPounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/main_pounds" />
    </RadioGroup>

    <TextView
        android:id="@+id/main_txtFnlExc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_final_exchange" />

    <RadioGroup
        android:id="@+id/main_fnlExc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/main_margin_radioButton"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbToEuro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/main_euro" />

        <RadioButton
            android:id="@+id/rbToDollar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/main_dolar" />

        <RadioButton
            android:id="@+id/rbToPounds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/main_pounds" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/main_LL_imgView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/main_margin_radioButton"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/main_imagenView_orgExc_marginRight"
            android:src="@drawable/ic_empty_exchange" />

        <ImageView
            android:id="@+id/main_arrow_ImgView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_iconmonstr_arrow_23" />

        <ImageView
            android:id="@+id/imgTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_imagenView_orgExc_marginLeft"
            android:src="@drawable/ic_empty_exchange" />
    </LinearLayout>

    <Button
        android:id="@+id/btnExchange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/main_button_change"
        android:layout_margin="@dimen/main_margin_radioButton"/>

</LinearLayout>